<?xml version="1.0"?>

<resources>

    <string name="app_name">CIBO</string>

    <string name="text_cibo">CIBO</string>

    <string name="iniciar">Iniciar</string>

    <string name="registrarse">registrarse</string>

    <string name="logo">logo</string>

    <string name="aceptar">aceptar</string>

    <string name="cancelar">cancelar</string>

    <string name="crear_cuenta">Crear Cuenta</string>

    <string name="correo">Correo</string>

    <string name="contrasena">Contraseña</string>

    <string name="escribe_la_informaci_n_para_crear_la_cuenta">Escribe la información para crear la cuenta:</string>

    <string name="nombre">Nombre</string>

    <string name="modificar_producto">Modificar Producto</string>
    <string name="tomar_fotografia">Elegir fotos</string>

    <string name="leche">Leche</string>
    <string name="atun">atun</string>
    <string name="arroz">arroz</string>
    <string name="azucar">azucar</string>
    <string name="cafe">cafe</string>
    <string name="carne">Carne</string>
    <string name="chicharos">Chicharos</string>
    <string name="chile">chile lata</string>
    <string name="frijol">Frijol</string>
    <string name="manzana">Manzana</string>
    <string name="limon">Limón</string>
    <string name="naranja">Naranja</string>
    <string name="papa">Papa</string>
    <string name="pasta">Pasta</string>
    <string name="platano">Platano</string>
    <string name="pollo">Pollo</string>
    <string name="sal">sal</string>
    <string name="tomate">Tomate</string>
    <string name="uvas">Uvas</string>
    <string name="zanahorias">Zanahorias</string>
    <string name="correo_main">Correo:</string>
    <string name="Acceder">Acceder</string>
    <string name="bienvenido_mensaje">Bienvenido</string>
    <string name="notificaciones_text">Notificaciones:</string>
    <string name="Instrucciones_menu">Elija que desea hacer:</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="visualizar_almacen">Visualizar Almacen</string>
    <string name="Cancelar_menu">Salir</string>
    <string name="Elegir_Fotos">Elegir fotos a analizar</string>
    <string name="Instrucciones_elegir_fotos">Seleccione las fotografias que desea analizar:</string>
    <string name="instrucciones_almacen">Seleccione un producto y realice una acción:</string>
    <string name="nombre_del_alimento">Nombre del Alimento</string>
    <string name="fecha_de_caducidad">Fecha de Caducidad</string>
    <string name="cantidad">Cantidad</string>
    <string name="btn_eliminar_producto">Eliminar Producto</string>
    <string name="alimentos_en_almac_n">Alimentos en almacén</string>
    <string name="salir_almacen">Salir</string>
    <string name="salir_fotos">Salir</string>

</resources>