<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_Aceptar"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginBottom="116dp"
        android:background="#4CAF50"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/id_text_ModificarCuenta"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/crear_cuenta"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_marginTop="564dp"
        android:background="#F44336"
        android:text="@string/cancelar"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_Contrasena"
        android:layout_width="290dp"
        android:layout_height="51dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/edit_Contrasena"
        android:text="@string/contrasena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/text_instruccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="548dp"
        android:text="@string/escribe_la_informaci_n_para_crear_la_cuenta"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_Nombre"
        android:layout_width="290dp"
        android:layout_height="51dp"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="436dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType=""
        android:labelFor="@id/edit_Nombre"
        android:text="@string/nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_Correo"
        android:layout_width="290dp"
        android:layout_height="51dp"
        android:layout_marginLeft="68dp"
        android:layout_marginBottom="348dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType=""
        android:labelFor="@id/edit_Correo"
        android:text="@string/correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</android.support.constraint.ConstraintLayout>