<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarProducto">

    <Button
        android:id="@+id/btn_Aceptar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="152dp"
        android:background="#4CAF50"
        android:text="@string/aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_cancelar_Prod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="596dp"
        android:background="#F44336"
        android:text="@string/cancelar"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_text_Modificar_P"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:text="@string/modificar_producto"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="532dp"
        android:text="Nombre:"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_NombreP"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="492dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_FechaCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="444dp"
        android:text="Fecha de Caducidad:"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_FechaCad"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="400dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/text_Cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="352dp"
        android:text="Cantidad:"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_Cantidad"
        android:layout_width="205dp"
        android:layout_height="37dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="312dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spin_cantidadAtrib"
        android:layout_width="70dp"
        android:layout_height="37dp"
        android:layout_marginLeft="260dp"
        android:layout_marginBottom="312dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/spin_Categoria"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="248dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>